Small Quality of Life Improvements Fixed Title Size for "Completed Events". Added Fade in Animation to different Section. Added Star burst logo as bg Added Button Outline. Added Footer hover animation Fixed spacing in Header.

--- a/website/src/app/globals.css
+++ b/website/src/app/globals.css
@@ -30,6 +30,18 @@ body {
     transform: scale(1.13);
   }
 }
+.link-hover-anim{
+  transition: all 300ms cubic-bezier(0.47, 1.64, 0.41, 0.8);
+}
+.button-anime {
+  @apply font-bold bg-accent text-white hover:bg-blackMain hover:text-accent rounded-full py-4 transition duration-400;
+}
+.card-anim {
+  transition: all 400ms cubic-bezier(0.47, 1.64, 0.41, 0.8);
+}
+.countdown-hover-anim {
+  @apply hover:outline outline-none hover:outline-white hover:scale-105 transition-all duration-200;
+}
 
 body {
   @apply text-blackMain;
@@ -106,12 +118,7 @@ body {
 .about-content {
   @apply max-w-[800px];
 }
-.button-anime {
-  @apply font-bold bg-accent text-white hover:bg-blackMain hover:text-accent rounded-full py-4 transition duration-400;
-}
-.card-anim {
-  transition: all 400ms cubic-bezier(0.47, 1.64, 0.41, 0.8);
-}
+
 .media {
   @apply flex gap-3 w-full justify-center items-center md:justify-start py-2;
 }
@@ -120,9 +127,7 @@ body {
   @apply bg-accent w-[30px] h-[30px] md:w-[35px] md:h-[35px] text-white hover:bg-blackMain hover:outline outline-tertiary hover:outline-accent hover:outline-[0.15px] hover:text-accent pt-[2px]  flex justify-center items-center rounded-full transform duration-400;
 }
 
-.countdown-hover-anim {
-  @apply outline outline-accent hover:outline-white hover:scale-105 transition-all duration-200;
-}
+
 
 .event-card {
   @apply flex flex-col items-end justify-between outline outline-blackMain outline-[1px] w-80 h-[28rem] pt-8 rounded-2xl;
